--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <!-- Bootstrap Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+    <title>Tribute Page</title>
 </head>
 <body>
-
+<div id="wrap" class="container-fluid" style="display: none">
+    <div class="jumbotron">
+        <h1 class="text-center">{{subject}}</h1>
+        <h2 class="text-center"><i>{{subheader}}</i></h2>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <img class="img-responsive center-block" alt="Picture" src="{{imgurl}}">
+                {{caption}}
+            </div>
+        </div>
+        <div id="content" class="center-block">
+            <h3>Timeline</h3>
+            <ul>
+                {{timeline}}
+            </ul>
+            <blockquote>
+                <p>{{quote}}</p>
+                <footer>{{source}}</footer>
+            </blockquote>
+            <h3>Read more at this link: <a href="{{linkurl}}">{{linktext}}</a></h3>
+        </div>
+    </div>
+</div>
 </body>
 </html>
