Finish all functionality. Add documentation to code.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </div>
 </div>
 <script src="code/tribute-generator.js"></script>
+<!-- Change the next line to data/<your-content>.js to generate your page --->
 <script src="data/example.js"></script>
 <script>
-    fillTemplate('#wrap', dataStruct);
+    fillTemplate('#wrap', content);
 </script>
 </body>
 </html>
