Updated user docs.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 </div>
-<script src="code/tribute-generator.js"></script>
+<script src="code/fill-template.js"></script>
 <!-- Change the next line to data/<your-content>.js to generate your page --->
 <script src="data/example.js"></script>
 <script>
